# FileSharing

./: CMakeLists.txt
Bootstart_Node/src/: main.cpp
Client/: CMakeLists.txt
Client/include/: SocketHandler.h
Client/scripts/: build.bat
Client/src/: SocketHandler.cpp  main.cpp
Node/: CMakeLists.txt
Node/src/: MyClass.cpp  main.cpp
Server/: CMakeLists.txt  README.md
Server/config/: database_config.h  server_config.h
Server/include/: MyClass.h  ServerSocketHandler.h  i_authentication_service.h  i_controller.h  my_class.h  server_socket_handler.h
Server/include/controllers/: authentication_controller.h
Server/include/domain/: file.h  folder.h  user.h
Server/include/infrastructure/database/: database_repository.h
Server/include/infrastructure/network/: network_handler.h  socket_network_handler.h
Server/include/infrastructures/: database_repository.h
Server/include/infrastructures/network/: network_handler.h
Server/include/services/: authentication_service.h
Server/src/: main.cpp  my_class.cpp
Server/src/controllers/: authentication_controller.cpp
Server/src/domain/: file.cpp  file.h  folder.cpp  folder.h  user.cpp  user.h
Server/src/domain/services/: authentication_service.cpp
Server/src/infrastructure/network/: server_socket_handler.cpp  socket_network_handler.cpp
Server/src/infrastructures/network/: ServerSocketHandler.cpp
docs/: api_documentation.md
include/: MyClass.h
src/: MyClass.cpp  main.cpp
